zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_change_floating_pane_coordinates_action.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", snapshot)"
---
00 (C): ┌ Pane #1 ─────────────────────────────────────────────────────────── able-ant ┐
01 (C): │                                                                              │
02 (C): │                                                                              │
03 (C): │                   ┌ Pane #2 ─────── PIN [ ] | active-ant ┐                   │
04 (C): │                   │                                      │                   │
05 (C): │                   │                                      │                   │
06 (C): │                   │                                      │                   │
07 (C): │                   └──────────────────────────────────────┘                   │
08 (C): │                                                                              │
09 (C): └──────────────────────────────────────────────────────────────────────────────┘
