zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_half_page_scroll_down_action-4.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", snapshot)"
---
00 (C): ┌ Pane #1 ─── SCROLL:  8/13 | able-ant ┐┌ Pane #2 ───────────────── active-ant ┐
01 (C): │fill pane up with something 5         ││                                      │
02 (C): │fill pane up with something 6         ││                                      │
03 (C): │fill pane up with something 7         ││                                      │
04 (C): │fill pane up with something 8         ││                                      │
05 (C): │fill pane up with something 9         ││                                      │
06 (C): │fill pane up with something 10        ││                                      │
07 (C): │fill pane up with something 11        ││                                      │
08 (C): │fill pane up with something 12        ││                                      │
09 (C): └──────────────────────────────────────┘└──────────────────────────────────────┘
